# M5PaperColor-album

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: clang-format-check.yml
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/app_manager/: app_manager.cpp  app_manager.h
main/apps/app_server/: app_server.cpp  app_server.h  index.html
main/apps/ezdata_photo_push/: ezdata_blank_image.h  ezdata_photo_push.cpp  ezdata_photo_push.h
main/apps/local_photo_slideshow/: local_photo_slideshow.cpp  local_photo_slideshow.h
main/assets/: boot_sfx.h
main/hal/: hal.cpp  hal.h
main/hal/ezdata/: hal_ezdata.cpp  hal_ezdata.h
main/hal/storage/: hal_storage.cpp  hal_storage.h
main/hal/utils/audio/: audio.cpp  audio.h
main/hal/utils/daemon_control/: daemon_control.h
main/hal/utils/dns_server/: dns_server.c  dns_server.h
main/hal/utils/image/: image_utils.cpp  image_utils.h
main/hal/wifi/: hal_wifi.cpp  hal_wifi.h
tools/: flash.sh
